# ai-model-hub

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/core/: config.py  schemas.py
app/embedding/: main.py
app/reranker/: main.py
clients/: embedding_client.py  reranker_client.py
config/: config.yaml
scripts/: init.sh  shutdown.sh
